--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-<h1>{{ title }}</h1>
+<!-- <h1>{{ title }}</h1>
 
 <hr>
 <app-counter></app-counter>
 <hr>
 <app-heroes-hero></app-heroes-hero>
 <hr>
-<app-hereos-list></app-hereos-list>
+<app-hereos-list></app-hereos-list> -->
+
+<app-dbz-main-page></app-dbz-main-page>
